--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Samiha-Taha.github.io/My-react-app",
+  "homepage": "https://Samiha-Taha.github.io/My-react-app.git",
   "devDependencies": {
     "gh-pages": "^6.2.0"
   }
